--- a/styles.css
+++ b/styles.css
@@ -156,3 +156,35 @@ to {
   .insta-image img {
       width: 60px;
   }
+
+  header {
+    background-color:#fff;
+    color: #fff;
+    top: 0;
+    left: auto;
+    right: 0;
+    position: sticky;
+    width: 100%;
+    display: flex;
+    z-index: 1100;
+    box-sizing: border-box;
+    flex-shrink: 0;
+    flex-direction: column;
+    min-height: 64px;
+    box-shadow: 0px 2px 4px -1px rgba(0,0,0,0.2), 0px 4px 5px 0px rgba(0,0,0,0.14), 0px 1px 10px 0px rgba(0,0,0,0.12);
+
+  }
+  header .logo-holder {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+    max-height: 130px;
+  }
+
+  header .logo-holder img {
+    height: 50px;
+    margin: 12px;
+}
+
+  
