--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,10 @@ body {
   color: #454545;
 }
 
+*, *::before, *::after {
+  box-sizing: inherit;
+}
+
 /* A-frame styles */
 video {
 width: 100vw;
@@ -195,6 +199,64 @@ to {
     height: 50px;
     margin: 12px;
 }
+
+/* hamburger*/
+header .app-nav {
+    position: absolute;
+    right: 10px;
+    top: 10px;
+}
+
+header .app-nav button {
+  margin: 0;
+  color: #d03835;
+  background: white;
+  border: 0;
+}
+
+header .MuiIconButton-root {
+  flex: 0 0 auto;
+  color: rgba(0, 0, 0, 0.54);
+  padding: 12px;
+  overflow: visible;
+  font-size: 1.5rem;
+  text-align: center;
+  transition: background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+  border-radius: 50%;
+
+}
+
+header .MuiIconButton-label {
+  width: 100%;
+  display: flex;
+  align-items: inherit;
+  justify-content: inherit;
+}
+
+header .MuiSvgIcon-root {
+  fill: currentColor;
+  width: 1em;
+  height: 1em;
+  display: inline-block;
+  font-size: 1.5rem;
+  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+  flex-shrink: 0;
+  user-select: none;
+}
+
+header .MuiTouchRipple-root {
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 0;
+  overflow: hidden;
+  position: absolute;
+  border-radius: inherit;
+  pointer-events: none;
+}
+
+/* end hamburger*/
 
 .sub-head {
   background-color:#d03835;
