--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+/* fonts */
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Raleway', 'Oxygen', 'Ubuntu',
@@ -6,6 +7,8 @@ body {
   -moz-osx-font-smoothing: grayscale;
   color: #454545;
 }
+
+
 
 /* A-frame styles */
 video {
@@ -82,6 +85,45 @@ cursor: pointer;
     height: 40px;
     width: 40px;
 }
+
+.select-btn {
+  color: #fff;
+  background-color: #e2202a;
+  border-radius: 30px;
+  padding: 5px;
+  width: 80%;
+  margin: auto;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+/* bottle content overlay */
+
+#bottle-content {
+  height: 180px;
+  background-image: url("assets/backgroundpicks/callanoldfriend.gif") ;
+  color: #fff;
+  font-size: 4vh;
+  padding-top: 10px;
+  margin-top: 80px;
+}
+
+#bottle-content .title {
+  padding-top:30px
+}
+
+#bottle-content .user-name {
+  font-size: 2vh;
+}
+
+.bottle-content-image {
+width: 100%;
+}
+
+#bottle-share-btn {
+  margin-top: 80px;
+}
+
 
 
 
